--- a/G2Project.ini
+++ b/G2Project.ini
@@ -1,7 +1,9 @@
 
 [g2]
 G2Connection=sqlite3://na:na@/opt/senzing/g2/sqldb/G2C.db
+#G2Connection=postgresql://username:password@hostname:5432:database/?=schema=schemaname
 #G2Connection=mysql://username:password@hostname:3306/?schema=schemaname
+#G2Connection=db2://username:password@database/?schema=schemaname
 G2ConfigFile=/opt/senzing/g2/python/g2config.json
 iniPath=/opt/senzing/g2/python/G2Module.ini
 collapsedTableSchema=Y
