--- a/.pylintrc
+++ b/.pylintrc
@@ -22,6 +22,7 @@ disable=
     too-many-instance-attributes,
     too-many-locals,
     too-many-nested-blocks,
+    too-many-positional-arguments,
     too-many-statements,
     trailing-newlines,
     unidiomatic-typecheck,
